# agent-usage-collector

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  MEMORY.md  PLAN.md  PROGRESS.md  README.md  TASKS.md  pyproject.toml
coordination/: README.md
coordination/delivery/: usage-mvp-01-delivery-report.md  usage-mvp-01-fix-delivery-report.md  usage-mvp-02-delivery-report.md  usage-mvp-03-delivery-report.md  usage-mvp-04-delivery-report.md
coordination/incidents/: 2026-07-19_usage-mvp-04_remote-publish-approval.md
coordination/progress/: external-agent-platform-25.md  external-agent-platform-32.md  external-agent-research-01.md
coordination/reviews/: review-usage-mvp-01-fix.md  review-usage-mvp-01.md  review-usage-mvp-02.md  review-usage-mvp-03.md  review-usage-mvp-04.md
coordination/task-board/done/: 2026-07-16_usage-mvp-01_provider-source-inventory.md  2026-07-16_usage-mvp-02_storage-and-normalization-foundation.md  (+3 more)
docs/: bounded-collection-service.md  codex-jsonl-adapter.md  data-contract.md
docs/architecture/: mvp-architecture.md
docs/operations/: first-live-phase-rollout.md  work-context-workflow.md
docs/research/: privacy-checklist.md  provider-source-inventory.md  reference-decisions.md
src/usage_collector/: codex_jsonl_adapter.py  collection_service.py  models.py  storage.py
tests/: test_codex_jsonl_adapter.py  test_collection_service.py  test_storage.py
tests/fixtures/: content_bearing.jsonl  cursor_lines.jsonl  dedupe_identity.jsonl  malformed_input.jsonl  nested_forbidden.jsonl  unknown_values.jsonl  valid_metadata.jsonl
(+10 files in other folders)
