[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-usage-collector"
version = "0.1.0"
description = "Low-overhead local usage collection and desktop display for AI agents."
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
